# sports_record

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
ffmpeg_common/: Cargo.toml
ffmpeg_common/src/: lib.rs
ffmpeg_common/src/networking/: network_packet.rs
ffmpeg_common/src/unsafe_code/: errors.rs  frame.rs  stream_config.rs
ffmpeg_common/src/unsafe_code/codec/: codec.rs  context_storage.rs  decoder.rs  encoder.rs  mod.rs
ffmpeg_common/src/unsafe_code/format/: mod.rs  output.rs
ffmpeg_common/src/unsafe_code/sws/: mod.rs  sws_alloc.rs
ffmpeg_common/src/unsafe_code/traits/: as_raw.rs
ffmpeg_common/src/unsafe_code/utils/: av_register.rs  codec_parameters.rs  pixel_fmt.rs  rational.rs
html/server/: README.md  index.html  package.json
html/server/src/: App.vue
record_client/: Cargo.toml
record_client/src/: main.rs
record_client/src/client/: client_configuration.rs  client_struct.rs  discovery.rs  errors.rs  sending.rs  status_enumeration.rs
sports_record_server/: Cargo.toml
sports_record_server/src/: main.rs
sports_record_server/src/server/: mod.rs  (+3 more)
src/: lib.rs  main.rs
src/client/: client_struct.rs  errors.rs  mod.rs  sending.rs  status_enumeration.rs
src/config/: codec_parameters.rs  mod.rs  server_configuration.rs  stream_config.rs
src/framework/: errors.rs  mod.rs  prelude.rs
src/networking/: mod.rs  network_configuration.rs  network_packet.rs
src/server/: errors.rs  io_handler.rs  messenger.rs  mod.rs  recording_server.rs  video_receiver.rs
src/unsafe_code/: codec.rs  errors.rs  macros.rs  mod.rs  packet.rs  utils.rs
(+63 files in other folders)
