[package]
name = "sports_record"
version = "0.1.0"
authors = ["Evan Merlock <vnmrlck@gmail.com>"]

[dependencies]
iron = "0.5.1"
router = "0.5.0"

uuid = { version = "0.2", features = ["v4"] }

rusqlite = "0.10.1"

ffmpeg-sys = "3.2.1"
libc = "0.2.19"
magick_rust = { git = "https://github.com/deadlyelectron/magick-rust.git" }

serde = "1.0.1"
serde_derive = "1.0.1"
serde_json = "1.0.0"